--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,9 @@ httplib2==0.22.0
 # Environment variables
 python-dotenv==1.0.0
 
+# Barcode generation
+pypdf417==0.7.2
+Pillow==10.1.0
 # Utilities
 pyOpenSSL==23.2.0
 cryptography==41.0.5
